kubernetes/apps/network/envoy/config/robots/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: robots
spec:
  parentRefs:
    - name: external
    - name: internal
  rules:
    - matches:
        - path:
            type: Exact
            value: /robots.txt
      filters:
        - type: ExtensionRef
          extensionRef:
            group: gateway.envoyproxy.io
            kind: HTTPRouteFilter
            name: robots
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            set:
              # cache for 1 hour
              - name: Cache-Control
                value: "public, max-age=3600"
              # Prevent robots itself from getting indexed
              - name: X-Robots-Tag
                value: "noindex, nofollow"
